Test for bad data. I used toast messages for bad data, and I had trouble finding a test that worked for the toast. I ran three test that should pass if the app dosen't fail, and well fails if it does.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="@string/paymentHint"
                 android:inputType="number|numberSigned|numberDecimal" />
         </TableRow>
 
@@ -55,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="@string/rateHint"
                 android:inputType="number|numberSigned|numberDecimal" />
         </TableRow>
 
@@ -75,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="@string/periodHint"
                 android:inputType="number|numberSigned" />
         </TableRow>
     </TableLayout>
